<resources>
    <string name="app_name">RoadExp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insurance_paper">Insurance Paper</string>

    <string name="Rs">\u20B9</string>
    <string name="verify_your_identity">Verify your Identity</string>
    <string name="title_activity_login_page">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_locate_vehicle_in_map">Map</string>
    <string name="add_pics">Add Pics</string>
    <string name="transporter_pic">Transporter Pic</string>
    <string name="aadhar_pic">Aadhar Pic</string>
    <string name="submit">Submit</string>
    <string name="pramod_kumar">Pramod Kumar</string>
    <string name="male">Male</string>
    <string name="_32_yrs">32 yrs</string>
    <string name="basic_info">Basic Info</string>
    <string name="joining_date">Joining Date :</string>
    <string name="no_of_successful_trip">No. of Successful Trip :</string>
    <string name="mapped">Mapped :</string>
    <string name="mapped_to">Mapped To :</string>
    <string name="documents">Documents :</string>
    <string name="aadhar">Aadhar</string>
    <string name="dl_front_pic">Dl Front Pic</string>
    <string name="dl_back_pic">Dl Back Pic</string>
    <string name="remaining_rs_0">Remaining : Rs.0</string>
    <string name="filter_by">Filter By</string>
    <string name="sort_by">Sort By</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="fogot_password">Fogot Password?</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_use">Or Use</string>
    <string name="missed_loads">Missed Loads</string>
    <string name="this_month">This Month</string>
    <string name="total_loads">Total Loads :</string>
    <string name="accepted">Accepted :</string>
    <string name="missed">Missed :</string>
    <string name="missed_notification">Missed Notification</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="bank_account">Bank Account</string>
    <string name="ifsc">Ifsc</string>
    <string name="bank_account_holder">Bank Account Holder</string>
    <string name="fleet_size">fleet size</string>
    <string name="confirm">Confirm</string>
    <string name="payment_history">Payment History</string>
    <string name="payment_report">Payment Report</string>
    <string name="lets_start_moving_things">Lets start moving things</string>
    <string name="together">Together</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="travel_history">Travel History</string>
    <string name="travel_report">Travel Report</string>
    <string name="vehicle_unverified">Vehicle Unverified</string>
    <string name="driverlist2">DriverList2</string>
    <string name="vehicle_status">Vehicle Status</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="real_time_tracking_n_of_your_vehicle">Real time tracking  of\nyour vehicle</string>
    <string name="find_daily_loads_at_best_n_market_rates">Find daily loads at best\nmarket rates</string>
    <string name="transparent_pricing">Transparent pricing</string>
    <string name="track_drivers_anytime">Track drivers\nanytime</string>
    <string name="_100_payment_guarantee">100% payment\nguarantee</string>

</resources>
