<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:scaleType="fitXY"
                android:src="@drawable/login"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-32dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="16dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:paddingBottom="16dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/mobile"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/email_box"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingStart="8sp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/email_box"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:paddingStart="8sp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:clickable="true"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/fogot_password"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/login"
                        style="@style/button_style_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:text="@string/login" />


                </LinearLayout>


            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/not_registered"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/singup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/sign_up"
                        android:textColor="@color/yellow_gradient"
                        android:textSize="16sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/or_use"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/google"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/google" />

                    <ImageView
                        android:id="@+id/fb"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:layout_marginLeft="44dp"
                        android:src="@drawable/facebook" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>





    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


</FrameLayout>