<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reports.PaymentReport.Driver.DriverPaymentHistoryPage">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:paddingTop="24dp"
            android:background="@drawable/toolbar_gradient"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginRight="4dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="24dp"
                    android:layout_gravity="center"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_back"/>

                <TextView
                    style="@style/toolbar_title"
                    android:layout_width="0dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_history" />

                <TextView
                    android:id="@+id/total_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remaining_rs_0"
                    android:textSize="10sp"
                    style="@style/button_style_1"/>


            </LinearLayout>



        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                app:cardCornerRadius="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content">


                <TextView
                    android:paddingLeft="24dp"
                    android:paddingRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:drawableRight="@drawable/arrow_down"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/black" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginLeft="20dp"
                app:cardCornerRadius="16dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:cardUseCompatPadding="true"
                android:layout_height="wrap_content">


                <TextView
                    android:paddingLeft="24dp"
                    android:paddingRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_by"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:drawableRight="@drawable/arrow_down"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/black" />

            </android.support.v7.widget.CardView>


        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:paddingTop="8dp"
            android:id="@+id/recycler_view_payment_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/no_payment_history"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Payment History"
        android:layout_gravity="center"
        android:textStyle="italic"/>

</FrameLayout>