<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginSingUp.AddTransPic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:background="@mipmap/banner_otp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="32dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_back_black" />

            <TextView
                android:id="@+id/text"
                android:layout_marginTop="-8dp"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/add_pics"/>



        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="50dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="32dp"
                android:paddingBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/edit_text_style_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/transporter_pic"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_below="@id/spinner_select_driver"
                            android:background="@drawable/line_gradient"/>


                    </LinearLayout>



                    <ImageView
                        android:id="@+id/upload1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="end"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/camera"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/edit_text_style_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/aadhar_pic"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="4dp"
                            android:layout_below="@id/spinner_select_driver"
                            android:background="@drawable/line_gradient"/>


                    </LinearLayout>



                    <ImageView
                        android:id="@+id/upload2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="end"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/circle"
                        android:padding="10dp"
                        android:src="@drawable/camera"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>



    </LinearLayout>

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:background="@drawable/line_gradient"/>



</FrameLayout>